Fixed box overlapping issue

--- a/trunk/less/main.less
+++ b/trunk/less/main.less
@@ -26,6 +26,7 @@ body,p {
     padding:@padding;
     position:fixed;
     width:35%;
+    min-width:320px;
 }
 ul{
     list-style-type: none; 
@@ -62,6 +63,7 @@ form{
         color: #BBBBBB;
         padding: 25px;
         text-align: center;
+        
     }
 }
 
@@ -77,10 +79,9 @@ form{
 .chart{
     background:#FFF;
     margin:@padding;
-    margin-bottom:30px;
 }
 .chart rect {
-    stroke: white;
+    stroke: steelblue;
     fill: steelblue;  
 }
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {
